feat: 32-bit config

--- a/Ring0NamedPipeFilter/Ring0NamedPipeFilter.vcxproj
+++ b/Ring0NamedPipeFilter/Ring0NamedPipeFilter.vcxproj
@@ -64,6 +64,7 @@
     <PlatformToolset>WindowsKernelModeDriver10.0</PlatformToolset>
     <ConfigurationType>Driver</ConfigurationType>
     <DriverType>WDM</DriverType>
+    <SpectreMitigation>false</SpectreMitigation>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <TargetVersion>Windows10</TargetVersion>
@@ -155,6 +156,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Link>
       <AdditionalDependencies>fltmgr.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
     <ClCompile>
       <PreprocessorDefinitions>Ring0NamedPipeFilter;%(PreprocessorDefinitions)</PreprocessorDefinitions>
